Wed Jul  9 21:20:13 UTC 2008  Ken Sedgwick  <ken+5a4@bonsai.com>

	* rpmbuild/README:
          Added basic rpmbuild instructions.

Wed Jul  9 19:07:24  2008  Steve Huston  <shuston@riverace.com>

        * tests/Reactor_Dispatch_Order_Test.cpp: Reversed this change:
          Sat Mar 29 08:16:57 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
          which disabled testing for ACE_Dev_Poll_Reactor. Let's see what the
          issues are then address and/or disable as needed.
          Also fixed a cut/paste error.

Wed Jul  9 18:37:57  2008  Steve Huston  <shuston@riverace.com>

        * tests/Reference_Counted_Event_Handler_Test.cpp: Enabled test for
          Winsock 2 systems; previously only ran the ACE_WFMO_Reactor-based
          test for non-Winsock 2 systems, where it is not supported.

Wed Jul  9 17:45:40 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Remove autoheader template for ACE_HAS_NON_BLOCKING_CONNECTS.

        * tests/MT_SOCK_Test.cpp:

          Remove use of ACE_HAS_NON_BLOCKING_CONNECTS feature test macro.
          It was removed since ACE no longer supports any systems that
          required it.

Wed Jul  9 16:09:30 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:
        * configure.ac:

          Remove feature test and autoheader template for
          ACE_LACKS_WILDCARD_BIND.

        * ace/Sock_Connect.cpp:

          Remove use of ACE_LACKS_WILDCARD_BIND feature test macro.

        * ace/README:

          Remove ACE_LACKS_WILDCARD_BIND from the list of feature test
          macros.  It was removed since ACE no longer supports any systems
          that required it.

Wed Jul  9 16:02:32 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Changed ACE_HAS_SIGVAL_SIGVAL_INT and ACE_HAS_SIGVAL_SIGVAL_PTR
          feature tests to use "union sigval" instead of "sigval_t".  The